better error handling if we try and scan a jar that doesn't contain descriptors. Now instead of throwing an IOException in that case we simply return an empty array of URLs to signify that we scanned successfully but there was nothing to find